--- a/css/styles.css
+++ b/css/styles.css
@@ -6,12 +6,13 @@
   padding: 0;
 }
 
+
 body {
     margin: 0;
     padding: 0;
 }
 header {
-    background-color: #8c420ac4;
+    background-color: #007BFF;
     color: white;
     text-align: center;
     padding: 10px 0;
@@ -24,6 +25,7 @@ img {
     height: auto;
     padding: 100px;
 }
+
 footer {
     text-align: center;
     padding: 10px 0;
@@ -31,11 +33,4 @@ footer {
     position: relative;
     bottom: 0;
     width: 100%;
-}
-
-ul li {
-    background-color: rgb(178, 167, 162);
-    padding: 5px;    
-    justify-content: space-between;
-    align-items: center;
 }
